# PowerMatrixRain

./: Cargo.toml  README.md  words.toml
src/: main.rs
