[package]
name = "power-rain"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.29"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
rand = "0.8"
glam = "0.25"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ab_glyph = "0.2"
font-kit = "0.14"
